# gspreader

./: CHANGELOG.md  README.md  pyproject.toml
gspreader/: __init__.py  __main__.py  config.py  gspreader.py
tests/: test_gspreader.py
